# 2024team1

./: .gitignore  README.md
bridge_ws/src/project_ws/carla_ros_bridge/launch/: carla_ros_bridge.launch  carla_ros_bridge_with_example_ego_vehicle.launch
bridge_ws/src/ros-bridge/carla_spawn_objects/config/: test.json
bridge_ws/src/ros-bridge/carla_spawn_objects/launch/: carla_spawn_objects.launch
bridge_ws/src/team_project/launch/: team_project2.launch
project_ws/: Objects.csv  object_result.txt
project_ws/launch/: team_project.launch
project_ws/msg/: ref_control.msg  vehicle_state.msg
project_ws/src/: README.txt
project_ws/src/carla_ros_bridge/carla_ros_bridge/launch/: carla_ros_bridge.launch.py  carla_ros_bridge_with_example_ego_vehicle.launch  carla_ros_bridge_with_example_ego_vehicle.launch.py  test.launch
project_ws/src/carla_ros_bridge/carla_spawn_objects/config/: objects.json  test.json
project_ws/src/controller_verification/: CMakeLists.txt  package.xml
project_ws/src/controller_verification/include/: waypoint_loader.h
project_ws/src/controller_verification/launch/: agent_launch.launch
project_ws/src/controller_verification/src/: Stanley_test.cpp  longitudinal_controller.cpp  stanley.cpp  stanley_controller.cpp  waypoint_loader.cpp  waypoints.csv  waypoints.txt
project_ws/src/custom_msgs/: CMakeLists.txt  package.xml
project_ws/src/custom_msgs/msg/: ref_control.msg  yolo_state.msg
project_ws/src/my_stanley_controller/: CMakeLists.txt  package.xml
project_ws/src/my_stanley_controller/launch/: my_stanley_controller.launch
project_ws/src/my_stanley_controller/src/: real_stanley.cpp  real_stanley_PID.cpp  real_stanley_ack.cpp
project_ws/src/perception/: CMakeLists.txt  package.xml
project_ws/src/perception/include/: KalmanFilter.h  lidar_pre.h  localization.h
project_ws/src/perception/launch/: lidar_pre.launch  localization.launch  perception.launch
project_ws/src/perception/msg/: vehicle_state.msg
project_ws/src/perception/src/: KalmanFilter.cpp  Yolo.py  bag2img.py  lidar2cam.py  lidar_pre.cpp  localization.cpp  tf_broadcaster.cpp
project_ws/src/team_project/: CMakeLists.txt  package.xml
project_ws/src/team_project/include/: collisionChecker.h  localization.h  plan_node.h  planner.h  trajectorygenerator.h  whole.h
project_ws/src/team_project/launch/: gnss_plan.launch  team_project.launch  team_project2.launch
project_ws/src/team_project/src/: collisionChecker.cpp  firstnode.cpp  main.cpp  plan_node.cpp  planner.cpp  trajectory_main.cpp  trajectorygenerator.cpp  whole.cpp
project_ws/src/team_project/src/mmm/: collisionChecker.cpp  collisionChecker.h  collisiontest  control_node.cpp  global_plan_route.txt  localization.cpp  localization_main.cpp  planner.cpp  planner.h  planner2.cpp  planner2.h  test  test.cpp  testㅁㄴㅇㄹ.cpp  trajectorygenerator.cpp  trajectorygenerator.h  trajectorygenerator_draft.cpp  trajectorygenerator_draft.h  waypoint_xyyaw_output.txt
team1/planning/: grid  grid.cpp  grid_ref.cpp  tempCodeRunnerFile.cpp
team1/planning/grid_debug.dSYM/Contents/: Info.plist
team1/planning/grid_debug.dSYM/Contents/Resources/DWARF/: grid_debug
team1/planning/grid_debug.dSYM/Contents/Resources/Relocations/aarch64/: grid_debug.yml
team1/planning/planner/: collisionCheck  decision.h  dicision.cpp  main.cpp  planner.cpp  planner.h  waypoint_xy_yaw.txt
team1/planning/planner/collisionCheck.dSYM/Contents/: Info.plist
team1/planning/planner/collisionCheck.dSYM/Contents/Resources/DWARF/: collisionCheck
team1/planning/planner/collisionCheck.dSYM/Contents/Resources/Relocations/aarch64/: collisionCheck.yml
team1/planning/planner/main.dSYM/Contents/Resources/DWARF/: main
team1/planning/planner/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
