<package format="2">
  <name>controller_verification</name>
  <version>0.0.0</version>
  <description>Controller verification for CARLA</description>
  <maintainer email="kiwooka25@gmail.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>carla_msgs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
