<package format="2">
  <name>my_stanley_controller</name>
  <version>0.0.0</version>
  <description>The my_stanley_controller package</description>

  <maintainer email="user@gmail.com">Your Name</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>carla_msgs</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>ackermann_msgs</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>custom_msgs</exec_depend> 
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  


  <export>
  </export>
</package>
