<?xml version="1.0"?>
<package format="2">
  <name>team_project</name>
  <version>0.0.0</version>
  <description>The team_project package</description>

  <maintainer email="ailab@todo.todo">ailab</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>carla_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>carla_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>carla_msgs</exec_depend>

  <export>
  </export>
</package>
